count downloads for individual videos (#25)
* add download counter to api

* update that counter as well

* dont serialize the counter with videos

* add route to get list of downloads

* add to openapi file

* stop warning for a11y

* expose download counter on frontend
